# amendoim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-30-cancel-query.md
docs/superpowers/specs/: 2026-03-30-cancel-query-design.md
src/: App.tsx  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  main.rs
src-tauri/src/commands/: connection.rs  mcp.rs  mod.rs  query.rs  schema.rs
src-tauri/src/db/: connection.rs  executor.rs  mod.rs  queries.rs
src-tauri/src/mcp/: protocol.rs  server.rs  tools.rs
src-tauri/src/models/: connection.rs  mod.rs  result.rs
src/components/: UpdateChecker.tsx
src/components/connection/: ConnectionCard.tsx  ConnectionList.tsx  ConnectionModal.tsx
src/components/editor/: EditorTabs.tsx  SqlEditor.tsx
src/components/layout/: Sidebar.tsx  (+6 more)
src/hooks/: useConnection.ts  useQuery.ts  useSchema.ts
src/i18n/: en.ts  index.ts  pt-BR.ts
src/lib/: analytics.ts  editor.ts  format.ts  monacoThemes.test.ts  monacoThemes.ts  tableSearch.test.ts  tableSearch.ts  tauri.ts  updateError.test.ts  updateError.ts
src/stores/: buildFilterClause.test.ts  connectionStore.ts  mcpStore.ts  queryFileStore.test.ts  queryFileStore.ts  queryStore.actions.test.ts  queryStore.test.ts  queryStore.ts  schemaStore.ts  tableSearch.test.ts  themeStore.test.ts  themeStore.ts
(+11 files in other folders)
